Migrate codebase to ES6
* use webpack
* fonts via webpack instead of webfonts
* separated terminal code and its components
* styles via webpack
* variables in style files

--- a/templates/index.htm
+++ b/templates/index.htm
@@ -3,19 +3,9 @@
     <head>
         <title></title>
         <meta charset="UTF-8"/>
-        <link href="{{ static_url("basic.css") }}" rel="stylesheet" />
-        <script src="//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
-        <script src="{{ static_url("ajaxterm.js") }}"></script>
-        <script>
-            document.addEventListener("DOMContentLoaded", function() {
-                var $basis = document.getElementById('basic')
-                  , terminal = new Po.Terminal($basis);
-
-                terminal.screen.focus();
-            });
-        </script>
     </head>
     <body>
         <div class="terminal" id="basic"></div>
+        <script type="text/javascript" src="{{ static_url("bundles/main.js") }}"></script>
     </body>
 </html>
