Add control-panel entry which extends basic terminal

--- a/templates/index.htm
+++ b/templates/index.htm
@@ -5,7 +5,7 @@
         <meta charset="UTF-8"/>
     </head>
     <body>
-        <div class="terminal" id="basic"></div>
+        <div class="terminal"></div>
         <script type="text/javascript" src="{{ static_url("bundles/main.js") }}"></script>
     </body>
 </html>
