Implement bold (extra bright) mode
Use Source Code Pro by default.

--- a/static/fonts.less
+++ b/static/fonts.less
@@ -1,9 +1,9 @@
 @font-face {
-    font-family: 'Droid Sans Mono';
-    src: url('./fonts/DroidSansMono.ttf');
+    font-family: 'SourceCodePro Regular';
+    src: url('./fonts/SourceCodePro-Regular.ttf');
 }
 
 @font-face {
-    font-family: 'Ubuntu Mono';
-    src: url('./fonts/UbuntuMono-R.ttf');
+    font-family: 'SourceCodePro Bold';
+    src: url('./fonts/SourceCodePro-Bold.ttf');
 }
