--- a/static/terminal/terminal.less
+++ b/static/terminal/terminal.less
@@ -4,7 +4,7 @@
     float: left;
 
     .terminal-display {
-        font-family: 'Droid Sans Mono';
+        font-family: 'SourceCodePro Regular';
         font-size: 14px;
         margin: 0px;
         overflow: hidden;
@@ -37,6 +37,8 @@
             &.b5  { background-color: @background-color5; }
             &.b6  { background-color: @background-color6; }
             &.b7  { background-color: @background-color7; }
+
+            &.bold { font-family: 'SourceCodePro Bold'; }
         }
     }
 
