--- a/static/terminal/terminal.less
+++ b/static/terminal/terminal.less
@@ -38,6 +38,7 @@
             &.b6  { background-color: @background-color6; }
             &.b7  { background-color: @background-color7; }
 
+            &.underline { text-decoration: underline; }
             &.bold { font-family: 'SourceCodePro Bold'; }
         }
     }
